--- a/Volte/en.lproj/Localizable.strings
+++ b/Volte/en.lproj/Localizable.strings
@@ -6,3 +6,4 @@
   Copyright © 2016 Perfectly-Cooked. All rights reserved.
 */
 "timeline.compose.what_are_you_up_to" = "What are you up to?";
+"timeline.compose.title" = "Compose";
