Add message when the timeline is empty

--- a/Volte/en.lproj/Localizable.strings
+++ b/Volte/en.lproj/Localizable.strings
@@ -7,3 +7,4 @@
 */
 "timeline.compose.what_are_you_up_to" = "What are you up to?";
 "timeline.compose.title" = "Compose";
+"timeline.empty" = "Your timeline is empty. ☹️";
