Display alert when message can't be sent

--- a/Volte/en.lproj/Localizable.strings
+++ b/Volte/en.lproj/Localizable.strings
@@ -11,3 +11,6 @@
 "login.failure.title" = "Invalid Credentials";
 "login.failure.message" = "Please make sure your credentials are correct and try again";
 "alert.dismiss" = "Dismiss";
+"compose.error.title" = "Unable to post message";
+"compose.error.message" = "We were ynable to post your message, please try again later.";
+
