--- a/Volte/en.lproj/Localizable.strings
+++ b/Volte/en.lproj/Localizable.strings
@@ -8,6 +8,10 @@
 "timeline.compose.what_are_you_up_to" = "What are you up to?";
 "timeline.compose.title" = "Compose";
 "timeline.empty" = "Your timeline is empty. ☹️";
+"timeline.date.seconds_ago" = "%d seconds ago";
+"timeline.date.minutes_ago" = "%d minutes ago";
+"timeline.date.hours_ago" = "%d hours ago";
+
 "login.failure.title" = "Invalid Credentials";
 "login.failure.message" = "Please make sure your credentials are correct and try again";
 "alert.dismiss" = "Dismiss";
