--- a/Sharing/fr.lproj/Localizable.strings
+++ b/Sharing/fr.lproj/Localizable.strings
@@ -6,6 +6,6 @@
   Copyright © 2016 Perfectly-Cooked. All rights reserved.
 */
 "sharing.error.title" = "Une erreur est survenue";
-"sharing.error.not_authenticated" = "Vous n'êtes pas authentifié dans l'appilcation Volte.";
+"sharing.error.not_authenticated" = "Vous n'êtes pas authentifié dans l'application Volte.";
 "sharing.error.composing" = "Une erreur est survenue lors de l'envoi du message.";
 "alert.dismiss" = "Fermer";
